CAR-5266: Update to Java 11